--- a/app/assets/stylesheets/sites.css.scss
+++ b/app/assets/stylesheets/sites.css.scss
@@ -167,5 +167,8 @@ $darkest_gold: #A67D12;
 		height: 16px;
 		vertical-align: -2px;
 	}
-	
+	#sites_table {
+		width: 80%;
+		margin-bottom: 20px;
+	}
 }
