--- a/app/views/departments/edit.html.erb
+++ b/app/views/departments/edit.html.erb
@@ -2,5 +2,6 @@
   <%= render 'fields', :f => f %>
   <div class="actions">
     <%= f.submit "Update" %>
+    <%= link_to "Cancel", departments_path, :class => "button" %>
   </div>
 <% end %>
