--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,5 +2,6 @@
   <%= render 'fields', :f => f %>
   <div class="actions">
     <%= f.submit "Create" %>
+    <%= link_to "Cancel", users_path, :class => "button" %>
   </div>
 <% end %>
