--- a/app/views/departments/index.html.erb
+++ b/app/views/departments/index.html.erb
@@ -1,23 +1,34 @@
-<% @departments.each do |dept| %>
-  <div class="department_summary" <%= dept.status_data %>>
-    <div id="<%= dept.short_name %>_chart" class="status_chart">
-    </div>
-    <div class="department_data">
-      <div class="department_title">
-        <%= link_to dept.display_name, department_path(dept) %>
+<section id="department_list">
+  <% @departments.each do |dept| %>
+    <div class="department_summary" <%= dept.status_data %>>
+      <div id="<%= dept.short_name %>_chart" class="status_chart">
       </div>
-      <div class="label_row"><!--
-        --><div class="windows_icon">
-          <%= image_tag "windows.png", :title => "Windows Clients", :size => "40x40", :class => "type_icon" %>
-        </div><!--
-        --><div class="label">Sites</div><!--
-        --><div class="mac_icon">
-          <%= image_tag "mac_light.png", :title => "Mac Clients", :size => "40x40", :class => "type_icon" %>
-        </div><!--
-      --></div>
-      <div class="data_row">
-        <div><%= dept.client_count("windows") %></div><div><%= dept.sites.count %></div><div><%= dept.client_count("macs") %></div>
+      <div class="department_data">
+        <div class="department_title">
+          <%= link_to dept.display_name, department_path(dept) %>
+        </div>
+        <div class="label_row">
+          <div class="windows_icon">
+            <%= image_tag "windows.png", :title => "Windows Clients", :size => "40x40", :class => "type_icon" %>
+          </div>
+          <div class="label">Sites</div>
+          <div class="mac_icon">
+            <%= image_tag "mac_light.png", :title => "Mac Clients", :size => "40x40", :class => "type_icon" %>
+          </div>
+        </div>
+        <div class="data_row">
+          <div><%= dept.client_count("windows") %></div><div><%= dept.sites.count %></div><div><%= dept.client_count("macs") %></div>
+        </div>
+        <% if can? :manage, dept %>
+          <div class="admin_row">
+            <%= link_to "edit", edit_department_path(dept), :title => "Edit #{dept.display_name}" %>
+            <%= link_to "delete", dept, :method => :delete, 
+                  :confirm => "Are you sure? All sites and users that belong to this department will be removed.",
+                  :title => "Delete #{dept.display_name}"  %>
+          </div>
+        <% end %>
       </div>
     </div>
-  </div>
-<% end %>
+  <% end %>
+</section>
+<%= link_to "New Department", new_department_path, :class => "button" if can? :create, Department %>
