--- a/app/views/departments/show.html.erb
+++ b/app/views/departments/show.html.erb
@@ -1,7 +1,10 @@
-<% @department.sites.each do |site| %>
-  <div class="site_summary" <%= SiteDecorator.find(site).status_data %>>
-    <%= link_to site.display_name, department_site_path(@department, site), :class => "site_title" %>
-    <div id="<%= site.short_name %>_chart" class="status_chart">
+<section id="site_list">
+  <% @department.sites.each do |site| %>
+    <div class="site_summary" <%= SiteDecorator.find(site).status_data %>>
+      <%= link_to site.display_name, department_site_path(@department, site), :class => "site_title" %>
+      <div id="<%= site.short_name %>_chart" class="status_chart">
+      </div>
     </div>
-  </div>
-<% end %>
+  <% end %>
+</section>
+<%= link_to "Manage Sites", sites_path, :class => "button" if can? :manage, Site %>
