--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,9 @@
 <html>
 <head>
   <title><%= title %></title>
+  <!--[if lt IE 9]>
+  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
   <%= stylesheet_link_tag    "application" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
@@ -17,9 +20,7 @@
           <%= content_tag(:div, value, :class => "flash ui-state-#{key}") %>
         <% end %>
       </div>
-      <header id="page_title">
-        <h1><%= page_heading %></h1>
-      </header>
+      <header id="page_title"><h1><%= page_heading %></h1></header>
       <%= yield %>
     </section>
      <%= debug(params) if Rails.env.development? %>
