--- a/app/views/sites/edit.html.erb
+++ b/app/views/sites/edit.html.erb
@@ -1,7 +1,7 @@
-<%= form_for(@user) do |f| %>
+<%= form_for(@site) do |f| %>
   <%= render 'fields', :f => f %>
   <div class="actions">
     <%= f.submit "Update" %>
-    <%= link_to "Cancel", users_path, :class => "button" %>
+    <%= link_to "Cancel", sites_path, :class => "button" %>
   </div>
 <% end %>
