--- a/app/views/sites/_site.html.erb
+++ b/app/views/sites/_site.html.erb
@@ -1,7 +1,7 @@
 <tr>
-  <td><%= site.display_name %></td>
-  <td><%= site.short_name %></td>
-  <td><%= site.name_filter %></td>
+  <td><%= best_in_place site, :display_name %></td>
+  <td><%= best_in_place site, :short_name %></td>
+  <td><%= best_in_place site, :name_filter %></td>
   <td><%= site.department.display_name %></td>
   <td><%= site.clients.count %></td>
   <td><%= link_to "edit", edit_site_path(site) %></td>
