Logs index/SQL Server prep

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -316,6 +316,49 @@ form {
 	padding: 20px;
 	@include rounded-corners(10px)
 }
+.pagination {
+	cursor: default;
+	height: 22px;
+	margin-bottom: 20px;
+	a, span, em {
+		padding: 0.2em 0.5em;
+		display: block;
+		float: left;
+		margin-right: 1px;
+	}
+	.disabled {
+		display: none;
+	}
+	.current {
+		font-style: normal;
+		font-weight: bold;
+		background: #2e6ab1;
+		color: white;
+		border: 1px solid #2e6ab1;
+	}
+	a {
+		text-decoration: none;
+		color: #FFE090;
+		border: 1px solid $main_blue;
+		&:hover, &:focus {
+			background-color: $light_blue;
+			color: #001621;
+		}
+	}
+	.page_info {
+	 	background: #2e6ab1;
+		color: white;
+		padding: 0.4em 0.6em;
+		width: 22em;
+		margin-bottom: 0.3em;
+		text-align: center;
+		b {
+			color: #000033;
+			background: #2e6ab1 + 60;
+			padding: 0.1em 0.25em;
+		}
+	}
+}
 .debug_dump {
 	margin-top: 50px;
 }
