Modified jQueryUI theme

--- a/app/assets/stylesheets/logs.css.scss
+++ b/app/assets/stylesheets/logs.css.scss
@@ -3,9 +3,9 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .logs {
 	#logs_table {
-		width: 80%;
+		width: 90%;
 		margin-bottom: 20px;
-		table-layout: fixed;
+		//table-layout: fixed;
 		
 		.device_info_toggler {
 			cursor: pointer;
