Modified upload logic

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -293,6 +293,9 @@ form {
 	padding-top: 2px;
 	font-size: 12px;
 	color: #A6D3FD;
+	span {
+		font-style: italic;
+	}
 }
 #flashes {
 	position: absolute;
