--- a/app/views/users/_fields.html.erb
+++ b/app/views/users/_fields.html.erb
@@ -36,6 +36,7 @@
 <div class="form_row">
   <div class="form_label">
     <%= f.label :role %>
+    <span class="roles_explanation_button_inline">(<a>?</a>)</span>
   </div>
   <div class="form_field">
     <div class="buttonset">
