--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,3 +5,7 @@
     <%= f.submit "Create" %>
   </div>
 <% end %>
+
+<aside id="roles_explanation">
+  <%= render :partial => 'roles_explanation' %>
+</aside>
