--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -6,4 +6,22 @@
 		width: 80%;
 		margin-bottom: 20px;
 	}
+	#roles_explanation_button {
+		display: block;
+		margin-top: 20px;
+	}
+	.roles_explanation_button_inline, .roles_explanation_button_inline a {
+		font-size: 12px;
+		color: #FFD568;
+		letter-spacing: 3px;
+	}
+}
+#roles_explanation_table {
+	width: 1000px;
+	height: 500px;
+	tbody th {
+		border-bottom: none;
+		border-right: 1px dotted #3399CC;
+		font-variant: normal;
+	}
 }
