--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,7 +4,7 @@
     <th>Username</th>
     <th>Email</th>
     <th>Department</th>
-    <th>Role</th>
+    <th>Role <span class="roles_explanation_button_inline">(<a>?</a>)</span></th>
     <th>Logins</th>
     <th></th>
     <th></th>
@@ -15,3 +15,9 @@
 </table>
 
 <%= link_to "Add", new_user_path, :class => "button" %>
+
+<a id="roles_explanation_button">Role Definitions</a>
+
+<aside id="roles_explanation">
+  <%= render :partial => 'roles_explanation' %>
+</aside>
