--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -3,6 +3,7 @@
     <th>Display Name</th>
     <th>Short Name</th>
     <th>Name Filter</th>
+    <th>Enabled</th>
     <th>Department</th>
     <th># Devices</th>
     <th></th>
