--- a/app/views/departments/show.html.erb
+++ b/app/views/departments/show.html.erb
@@ -1,5 +1,5 @@
 <section id="site_list">
-  <% @department.sites.each do |site| %>
+  <% @department.sites.enabled.each do |site| %>
     <div class="site_summary" <%= SiteDecorator.find(site).status_data %>>
       <%= link_to site.display_name, department_site_path(@department, site), :class => "site_title" %>
       <div id="<%= site.short_name %>_chart" class="status_chart">
