--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -14,6 +14,9 @@
     <% if can? :read, User %>
       <li <%= "class=active" if submenu_link_active? "users" %>><%= link_to "Users", users_path %></li>
     <% end %>
+    <% if can? :read, Client %>
+      <li <%= "class=active" if submenu_link_active? "clients" %>><%= link_to "Device Management", clients_path %></li>
+    <% end %>
     <% if signed_in? %>
       <li><%= link_to "Log Out", logout_path, :method => :delete %></li>
     <% else %>
