--- a/app/assets/stylesheets/logs.css.scss
+++ b/app/assets/stylesheets/logs.css.scss
@@ -4,16 +4,38 @@
 .logs {
 	#search_form {
 		margin-bottom: 30px;
-		width: 100%;
-		p {
-			display: inline-block;
+		width: 90%;
+		padding-bottom: 10px;
+		border-bottom: 1px dotted;
+		#filter_row {
+			margin-bottom: 15px;
+			//width: 60%;
+			line-height: 27px;
 			text-align: center;
-			input, label, select {
-				display: block;
+			p {
+				display: inline-block;
 				text-align: center;
+				vertical-align: bottom;
+				margin-right: 15px;
+				input, label, select {
+					display: block;
+					text-align: center;
+				}
+			}
+		}
+		#button_row {
+			//line-height: 27px;
+			text-align: center;
+			p {
+				display: inline-block;
+				margin-right: 15px;
 			}
 		}
 	}
+	//#reset_form {
+	//	display: block;
+//		margin-bottom: 30px;
+//	}
 	.no_logs {
 		font-size: 16px;
 	}
@@ -24,6 +46,12 @@
 		
 		.device_info_toggler {
 			cursor: pointer;
+			span:first-child {
+				display: inline;
+			}
+			span {
+				display: none;
+			}
 		}
 	}
 }
