Exception Notification and minor fixes

--- a/app/assets/stylesheets/sites.css.scss
+++ b/app/assets/stylesheets/sites.css.scss
@@ -200,6 +200,9 @@ $darkest_gold: #A67D12;
 	#type_icon_reserve {
 		display: none;
 	}
+	.no_sites {
+		font-size: 16px;
+	}
 	#sites_table {
 		width: 80%;
 		margin-bottom: 20px;
