--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -17,6 +17,9 @@
     <% if can? :read, Client %>
       <li <%= "class=active" if submenu_link_active? "clients" %>><%= link_to "Device Management", clients_path %></li>
     <% end %>
+    <% if can? :manage, Site %>
+      <li <%= "class=active" if submenu_link_active? "sites" %>><%= link_to "Site Management", sites_path %></li>
+    <% end %>
     <% if signed_in? %>
       <li><%= link_to "Log Out", logout_path, :method => :delete %></li>
     <% else %>
