Status check fix

--- a/app/assets/stylesheets/sites.css.scss
+++ b/app/assets/stylesheets/sites.css.scss
@@ -136,6 +136,7 @@ $darkest_gold: #A67D12;
 				margin: 2px;
 				white-space: nowrap;
 				overflow: hidden;
+				font-family: Tahoma;
 			}
 			.available {
 				background-color: #5BBD5C;
