--- a/app/assets/stylesheets/sites.css.scss
+++ b/app/assets/stylesheets/sites.css.scss
@@ -36,9 +36,9 @@ $darkest_gold: #A67D12;
 		color: #FFD24A;
 		font-style: italic;
 		font-variant: small-caps;
-		padding: 2px 2px 0px 6px;
+		padding: 2px 0px 0px 6px;
 		position: relative;
-		width: 1148px;
+		//width: 1148px;
 		text-decoration: none;
 		height: 25px;
 	}
@@ -87,12 +87,59 @@ $darkest_gold: #A67D12;
 		color: #001621;
 	}
 	.site_pane {
-		width: 1150px; //920px;
+		//width: 1150px; //920px;
 		display: block;
 		border: 2px solid $light_blue;
 		margin-bottom: 20px;
 		font-size: 0px;
 		
+		table {
+			width: 100%;
+			.details_table_header {
+				background-color: #1E3A54;
+				font-variant: small-caps;
+				th:first-child {
+					padding-left: 47px;
+					text-align: left;
+				}
+				th {
+					vertical-align: middle;
+					line-height: 20px;
+					text-align: center;
+					border: none;
+					font-weight: normal;
+					padding: 0px;
+					font-size: 12px;
+					color: #FADF8F;
+				}
+			}
+			.device_row {
+				.device_detail {
+					line-height: 20px;
+					height: 20px;
+					font-size: 14px;
+					padding: 0px;
+					.details {
+						font-size: 12px;
+					}
+					.user_toggler {
+						cursor: pointer;
+					}
+				}
+				.name_toggler {
+					cursor: pointer;
+				}
+				.available_detail {
+					color: #5BBD5C;
+				}
+				.unavailable_detail {
+					color: #DBC067;
+				}
+				.offline_detail {
+					color: #D66781;
+				}
+			}
+		}
 		.no_computers {
 			font-size: 20px;
 			padding: 10px;
