Added main throbbler

--- a/app/assets/stylesheets/sites.css.scss
+++ b/app/assets/stylesheets/sites.css.scss
@@ -288,6 +288,12 @@ $darkest_gold: #A67D12;
 			}
 		}
 	}
+	#main_throbbler {
+		max-width: 1600px;
+		text-align: center;
+		margin-top: 20px;
+		display: none;
+	}
 	#type_icon_reserve {
 		display: none;
 	}
