--- a/app/views/sites/show.html.erb
+++ b/app/views/sites/show.html.erb
@@ -7,6 +7,9 @@
 <ul id="site_list">
     <%= render :partial => 'site_pane', :collection => @sites %>
 </ul>
+<div id="main_throbbler">
+  <%= image_tag "ajax-loader2.gif", :alt => "Loading..." %>
+</div>
 <div id="type_icon_reserve">
   <%= image_tag "mac.png", :title => "Mac", :height => "16", :class => "type-icon mac" %>
   <%= image_tag "windows.png", :title => "Windows", :height => "16", :class => "type-icon windows" %>
