--- a/app/views/sites/_sites.html.erb
+++ b/app/views/sites/_sites.html.erb
@@ -5,6 +5,7 @@
       <th><%= sortable "short_name" %></th>
       <th><%= sortable "name_filter" %></th>
       <th><%= sortable "enabled" %></th>
+      <th><%= sortable 'site_type' %>
       <th><%= sortable "departments.display_name", "Department" %></th>
       <th># Devices</th>
       <th></th>
