--- a/app/views/departments/show.html.erb
+++ b/app/views/departments/show.html.erb
@@ -1,5 +1,10 @@
+<ul id="type_select">
+  <% Site::TYPES.each do |t| %>
+    <%= site_type_link(t) %>
+  <% end%>
+</ul>
 <section id="site_list">
-  <% @department.sites.enabled.each do |site| %>
+  <% @sites.each do |site| %>
     <div class="site_summary" <%= SiteDecorator.find(site).status_data %>>
       <%= link_to site.display_name, department_site_path(@department, site), :class => "site_title" %>
       <div id="<%= site.short_name %>_chart" class="status_chart">
