--- a/app/views/departments/show.html.erb
+++ b/app/views/departments/show.html.erb
@@ -1,15 +1,17 @@
-<ul id="type_select">
-  <% Site::TYPES.each do |t| %>
-    <%= site_type_link(t) %>
-  <% end%>
-</ul>
-<section id="site_list">
-  <% @sites.each do |site| %>
-    <div class="site_summary" <%= SiteDecorator.find(site).status_data %>>
-      <%= link_to site.display_name, department_site_path(@department, site), :class => "site_title" %>
-      <div id="<%= site.short_name %>_chart" class="status_chart">
+<% if @sites.any? %>
+  <ul id="type_select">
+    <%= @department.site_type_links(@site_type) %>
+  </ul>
+  <section id="site_list">
+    <% @sites.each do |site| %>
+      <div class="site_summary" <%= SiteDecorator.find(site).status_data %>>
+        <%= link_to site.display_name, department_site_path(@department, site), :class => "site_title" %>
+        <div id="<%= site.short_name %>_chart" class="status_chart">
+        </div>
       </div>
-    </div>
-  <% end %>
-</section>
+    <% end %>
+  </section>
+<% else %>
+  <p class="no_sites">There are no sites in this department.</p>
+<% end %>
 <%= link_to "Manage Sites", sites_path, :class => "button" if can? :manage, Site %>
