--- a/app/views/stats/index.html.erb
+++ b/app/views/stats/index.html.erb
@@ -1,5 +1,5 @@
 <section id="filters">
-  <%= form_tag({:controller => "stats", :action => "show"}, :method => "post") do %>
+  <%= form_tag({:controller => "stats", :action => "show"}, :method => "get", :id => "filter_form") do %>
   <ul id="filters_list">
     <li id="chart_selection_li" class="selection_li">
       <div class="selection_label">
@@ -91,7 +91,7 @@
     </li>
   </ul>
   <div id="filter_btn_div">
-    <input type="submit" name="filter_btn" value="Submit" id="filter_btn">
+    <%= submit_tag "Submit", :name => nil, :id => "filter_btn" %>
   </div>
   <% end %>
 </section>
