--- a/app/views/stats/index.html.erb
+++ b/app/views/stats/index.html.erb
@@ -95,7 +95,8 @@
   </div>
   <% end %>
 </section>
+<div id="toggle_filters_btn">Hide Filters</div>
 <div id="throbbler_div">
   <%= image_tag "ajax-loader2.gif", :alt => "Loading..." %>
 </div>
-<section id="chart"></section>
+<div id="chart"></div>
