--- a/app/assets/stylesheets/stats.css.scss
+++ b/app/assets/stylesheets/stats.css.scss
@@ -72,6 +72,7 @@
 	#toggle_filters_btn {
 		text-align: right;
 		cursor: pointer;
+		border-top: 2px dotted;
 	}
 	#toggle_filters_btn:hover {
 		text-decoration: underline;
