Stat page building

--- a/app/assets/stylesheets/stats.css.scss
+++ b/app/assets/stylesheets/stats.css.scss
@@ -50,10 +50,10 @@
 						margin-left: 10px;
 						text-align: center;
 					}
-					input[type="text"].input_selected {
+					input[type="text"].date_input_selected {
 						background-color: #1E3A54;
-						color: #FFD24A;
-						border: 1px solid #9C947C;
+						color: #FADF8F;
+						border: 1px solid #FADF8F;
 					}
 				}
 				.sublabel {
@@ -64,7 +64,7 @@
 				}
 			}
 		}
-		#filter_btn_div {
+		#filter_btn_dv {
 			padding: 10px;
 			text-align: center;
 		}
