--- a/app/views/stats/index.html.erb
+++ b/app/views/stats/index.html.erb
@@ -8,7 +8,7 @@
       <div class="selection_options">
         <div id="chart_selection" class="buttonset">
           <% %w[total average concurrent].each do |option| %>
-            <input type="radio" id="<%= option %>_logins" name="chart_select" value="<%= option %>-logins" /><label for="<%= option %>_logins"><%= option.titleize %> Logins</label>
+            <input type="radio" id="<%= option %>_logins" name="chart_select" value="<%= option %>" /><label for="<%= option %>_logins"><%= option.titleize %> Logins</label>
           <% end %>
         </div>
       </div>
